--- a/src/meta_sl/model-based/mann.ipynb
+++ b/src/meta_sl/model-based/mann.ipynb
@@ -80,60 +80,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "40F6XfqGdxv0"
-   },
-   "outputs": [],
-   "source": [
-    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    if not os.path.isdir(output_folder):\n",
-    "        os.mkdir(output_folder)\n",
-    "    filename = os.path.join(output_folder, title)\n",
-    "\n",
-    "    with open(filename, \"wb\") as f:\n",
-    "        state_dict = model.state_dict()\n",
-    "        torch.save(state_dict, f)\n",
-    "    print(\"Model is saved in\", filename)\n",
-    "\n",
-    "\n",
-    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    filename = os.path.join(output_folder, title)\n",
-    "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Model is loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "YLK5ejSpdzGp"
-   },
-   "outputs": [],
-   "source": [
-    "def print_graph(\n",
-    "    train_accuracies: List[float],\n",
-    "    val_accuracies: List[float],\n",
-    "    train_losses: List[float],\n",
-    "    val_losses: List[float],\n",
-    ") -> None:\n",
-    "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
-    "\n",
-    "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
-    "    axs[0].plot(val_accuracies, label=\"test_acc\")\n",
-    "    axs[0].set_title(\"Accuracy\")\n",
-    "    axs[0].legend()\n",
-    "\n",
-    "    axs[1].plot(train_losses, label=\"train_loss\")\n",
-    "    axs[1].plot(val_losses, label=\"test_loss\")\n",
-    "    axs[1].set_title(\"Loss\")\n",
-    "    axs[1].legend()\n",
-    "\n",
-    "    fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "kF2l3CBOd089"
    },
    "outputs": [],
@@ -168,7 +114,7 @@
    "outputs": [],
    "source": [
     "class Head(nn.Module):\n",
-    "    def __init__(self, memory: nn.Module, hidden_size: int) -> None:\n",
+    "    def __init__(self, memory: Memory, hidden_size: int) -> None:\n",
     "        super(Head, self).__init__()\n",
     "        self.memory = memory\n",
     "        self.k_layer = nn.Linear(hidden_size, self.memory.size[1])\n",
@@ -243,7 +189,7 @@
    "outputs": [],
    "source": [
     "class WriteHead(Head):\n",
-    "    def __init__(self, memory: nn.Module, hidden_size: int) -> None:\n",
+    "    def __init__(self, memory: Memory, hidden_size: int) -> None:\n",
     "        super(WriteHead, self).__init__(memory=memory, hidden_size=hidden_size)\n",
     "        self.e_layer = nn.Linear(hidden_size, memory.size[1])\n",
     "        self.a_layer = nn.Linear(hidden_size, memory.size[1])\n",
@@ -409,7 +355,7 @@
     "    task_batch_size: int,\n",
     "    device: str,\n",
     "    task_batch: Dict[str, List[torch.Tensor]],\n",
-    "    model: nn.Module,\n",
+    "    model: NTM,\n",
     "    criterion: nn.CrossEntropyLoss,\n",
     "    optimizer: torch.optim.RMSprop,\n",
     ") -> Tuple[float, float]:\n",
@@ -451,7 +397,7 @@
     "    task_batch_size: int,\n",
     "    device: str,\n",
     "    task_batch: Dict[str, List[torch.Tensor]],\n",
-    "    model: nn.Module,\n",
+    "    model: NTM,\n",
     "    criterion: nn.CrossEntropyLoss,\n",
     ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
@@ -472,6 +418,56 @@
     "        correct = torch.sum(prob_[..., -num_query:].argmax(dim=1) == y_seq[..., -num_query:])\n",
     "        accuracy = correct.item() / np.prod(y_seq[..., -num_query:].size())\n",
     "    return accuracy, loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(output_folder: str, model: NTM, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
+    "    with open(filename, \"wb\") as f:\n",
+    "        state_dict = model.state_dict()\n",
+    "        torch.save(state_dict, f)\n",
+    "    print(\"Model is saved in\", filename)\n",
+    "\n",
+    "\n",
+    "def load_model(output_folder: str, model: NTM, title: str) -> None:\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "    model.load_state_dict(torch.load(filename))\n",
+    "    print(\"Model is loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_graph(\n",
+    "    train_accuracies: List[float],\n",
+    "    val_accuracies: List[float],\n",
+    "    train_losses: List[float],\n",
+    "    val_losses: List[float],\n",
+    ") -> None:\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "\n",
+    "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
+    "    axs[0].plot(val_accuracies, label=\"test_acc\")\n",
+    "    axs[0].set_title(\"Accuracy\")\n",
+    "    axs[0].legend()\n",
+    "\n",
+    "    axs[1].plot(train_losses, label=\"train_loss\")\n",
+    "    axs[1].plot(val_losses, label=\"test_loss\")\n",
+    "    axs[1].set_title(\"Loss\")\n",
+    "    axs[1].legend()\n",
+    "\n",
+    "    fig.show()"
    ]
   },
   {
