--- a/src/meta_sl/model-based/snail.ipynb
+++ b/src/meta_sl/model-based/snail.ipynb
@@ -81,31 +81,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "NlyavH0jnu_z"
-   },
-   "outputs": [],
-   "source": [
-    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    if not os.path.isdir(output_folder):\n",
-    "        os.mkdir(output_folder)\n",
-    "    filename = os.path.join(output_folder, title)\n",
-    "\n",
-    "    with open(filename, \"wb\") as f:\n",
-    "        state_dict = model.state_dict()\n",
-    "        torch.save(state_dict, f)\n",
-    "    print(\"Model is saved in\", filename)\n",
-    "\n",
-    "\n",
-    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    filename = os.path.join(output_folder, title)\n",
-    "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Model is loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "wPh5zLIUnwOX"
    },
    "outputs": [],
@@ -371,7 +346,7 @@
     "    num_shots: int,\n",
     "    device: str,\n",
     "    task_batch: Dict[str, List[torch.Tensor]],\n",
-    "    model: nn.Module,\n",
+    "    model: SNAIL,\n",
     "    criterion: nn.CrossEntropyLoss,\n",
     "    optimizer: torch.optim.Adam,\n",
     ") -> Tuple[float, float]:\n",
@@ -408,7 +383,7 @@
     "    num_shots: int,\n",
     "    device: str,\n",
     "    task_batch: Dict[str, List[torch.Tensor]],\n",
-    "    model: nn.Module,\n",
+    "    model: SNAIL,\n",
     "    criterion: nn.CrossEntropyLoss,\n",
     ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
@@ -425,6 +400,29 @@
     "        _, query_preds = query_prob.max(1)\n",
     "        accuracy = torch.eq(query_preds, query_y).float().mean()\n",
     "    return accuracy.item(), loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(output_folder: str, model: SNAIL, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
+    "    with open(filename, \"wb\") as f:\n",
+    "        state_dict = model.state_dict()\n",
+    "        torch.save(state_dict, f)\n",
+    "    print(\"Model is saved in\", filename)\n",
+    "\n",
+    "\n",
+    "def load_model(output_folder: str, model: SNAIL, title: str) -> None:\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "    model.load_state_dict(torch.load(filename))\n",
+    "    print(\"Model is loaded\")"
    ]
   },
   {
@@ -449,7 +447,7 @@
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = SNAIL(config[\"num_ways\"], config[\"num_shots\"]).to(device=config[\"device\"])\n",
+    "model = SNAIL(num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(device=config[\"device\"])\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(params=model.parameters(), lr=1e-4)"
