--- a/src/meta_sl/opt-based/maml_classification.ipynb
+++ b/src/meta_sl/opt-based/maml_classification.ipynb
@@ -8,9 +8,10 @@
    },
    "outputs": [],
    "source": [
+    "import collections\n",
     "import os\n",
     "import warnings\n",
-    "from typing import Any, Dict, List, Tuple\n",
+    "from typing import Any, Dict, List, Optional, Tuple\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
@@ -86,11 +87,141 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "ISTrJGhj0MJM"
+    "id": "T7ws-pbu0MJN"
    },
    "outputs": [],
    "source": [
-    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "class ConvNet(MetaModule):\n",
+    "    def __init__(self, in_channels: int, out_features: int) -> None:\n",
+    "        super(ConvNet, self).__init__()\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_features = out_features\n",
+    "        self.hidden_size = 64\n",
+    "\n",
+    "        self.convs = MetaSequential(\n",
+    "            self.convBlock(self.in_channels, self.hidden_size, 3),\n",
+    "            self.convBlock(self.hidden_size, self.hidden_size, 3),\n",
+    "            self.convBlock(self.hidden_size, self.hidden_size, 3),\n",
+    "            self.convBlock(self.hidden_size, self.hidden_size, 3),\n",
+    "        )\n",
+    "\n",
+    "        self.linear = MetaLinear(self.hidden_size, self.out_features)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def convBlock(cls, in_channels: int, out_channels: int, kernel_size: int) -> MetaSequential:\n",
+    "        return MetaSequential(\n",
+    "            MetaConv2d(in_channels, out_channels, kernel_size, padding=1, stride=3),\n",
+    "            MetaBatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
+    "            nn.ReLU(),\n",
+    "        )\n",
+    "\n",
+    "    def forward(\n",
+    "        self, x: torch.Tensor, params: Optional[collections.OrderedDict] = None\n",
+    "    ) -> torch.Tensor:\n",
+    "        x_convs = self.convs(x, params=self.get_subdict(params, \"convs\"))\n",
+    "        prob = self.linear(x_convs.flatten(start_dim=1), params=self.get_subdict(params, \"linear\"))\n",
+    "        return prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "TL9Kq-5L0MJO"
+   },
+   "outputs": [],
+   "source": [
+    "def train_maml(\n",
+    "    device: str,\n",
+    "    task_batch_size: int,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: ConvNet,\n",
+    "    criterion: nn.CrossEntropyLoss,\n",
+    "    optimizer: torch.optim.Adam,\n",
+    ") -> Tuple[float, float]:\n",
+    "    model.train()\n",
+    "\n",
+    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
+    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
+    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
+    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
+    "\n",
+    "    outer_loss = torch.tensor(0.0, device=device)\n",
+    "    accuracy = torch.tensor(0.0, device=device)\n",
+    "\n",
+    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "        support_prob = model(support_x)\n",
+    "        inner_loss = criterion(support_prob, support_y)\n",
+    "\n",
+    "        params = gradient_update_parameters(model, inner_loss, step_size=0.4, first_order=True)\n",
+    "\n",
+    "        query_prob = model(query_x, params=params)\n",
+    "        outer_loss += criterion(query_prob, query_y)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            _, query_pred = torch.max(query_prob, dim=-1)\n",
+    "            accuracy += torch.mean(query_pred.eq(query_y).float())\n",
+    "\n",
+    "    outer_loss.div_(task_batch_size)\n",
+    "\n",
+    "    model.zero_grad()\n",
+    "    outer_loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    accuracy.div_(task_batch_size)\n",
+    "    return accuracy.item(), outer_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "1wQBu7TX0MJO"
+   },
+   "outputs": [],
+   "source": [
+    "def test_maml(\n",
+    "    device: str,\n",
+    "    task_batch_size: int,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: ConvNet,\n",
+    "    criterion: nn.CrossEntropyLoss,\n",
+    ") -> Tuple[float, float]:\n",
+    "    model.eval()\n",
+    "\n",
+    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
+    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
+    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
+    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
+    "\n",
+    "    outer_loss = torch.tensor(0.0, device=device)\n",
+    "    accuracy = torch.tensor(0.0, device=device)\n",
+    "\n",
+    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "        support_prob = model(support_x)\n",
+    "        inner_loss = criterion(support_prob, support_y)\n",
+    "\n",
+    "        params = gradient_update_parameters(model, inner_loss, step_size=0.4, first_order=True)\n",
+    "\n",
+    "        query_prob = model(query_x, params=params)\n",
+    "        outer_loss += criterion(query_prob, query_y)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            _, query_pred = torch.max(query_prob, dim=-1)\n",
+    "            accuracy += torch.mean(query_pred.eq(query_y).float())\n",
+    "\n",
+    "    outer_loss.div_(task_batch_size)\n",
+    "    accuracy.div_(task_batch_size)\n",
+    "    return accuracy.item(), outer_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(output_folder: str, model: ConvNet, title: str) -> None:\n",
     "    if not os.path.isdir(output_folder):\n",
     "        os.mkdir(output_folder)\n",
     "    filename = os.path.join(output_folder, title)\n",
@@ -101,7 +232,7 @@
     "    print(\"Model is saved in\", filename)\n",
     "\n",
     "\n",
-    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "def load_model(output_folder: str, model: ConvNet, title: str) -> None:\n",
     "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
     "    print(\"Model is loaded\")"
@@ -110,9 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "U2jX5XOa0MJN"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_graph(\n",
@@ -140,133 +269,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "T7ws-pbu0MJN"
-   },
-   "outputs": [],
-   "source": [
-    "class ConvNet(MetaModule):\n",
-    "    def __init__(self, in_channels, out_features):\n",
-    "        super(ConvNet, self).__init__()\n",
-    "        self.in_channels = in_channels\n",
-    "        self.out_features = out_features\n",
-    "        self.hidden_size = 64\n",
-    "\n",
-    "        self.convs = MetaSequential(\n",
-    "            self.convBlock(self.in_channels, self.hidden_size, 3),\n",
-    "            self.convBlock(self.hidden_size, self.hidden_size, 3),\n",
-    "            self.convBlock(self.hidden_size, self.hidden_size, 3),\n",
-    "            self.convBlock(self.hidden_size, self.hidden_size, 3),\n",
-    "        )\n",
-    "\n",
-    "        self.linear = MetaLinear(self.hidden_size, self.out_features)\n",
-    "\n",
-    "    def convBlock(self, in_channels, out_channels, kernel_size, **kwargs):\n",
-    "        return MetaSequential(\n",
-    "            MetaConv2d(in_channels, out_channels, kernel_size, padding=1, stride=3, **kwargs),\n",
-    "            MetaBatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
-    "            nn.ReLU(),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x, params=None):\n",
-    "        x_convs = self.convs(x, params=self.get_subdict(params, \"convs\"))\n",
-    "        prob = self.linear(x_convs.flatten(start_dim=1), params=self.get_subdict(params, \"linear\"))\n",
-    "        return prob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "TL9Kq-5L0MJO"
-   },
-   "outputs": [],
-   "source": [
-    "def train_MAML(args, task_batch, model, criterion, optimizer):\n",
-    "    model.train()\n",
-    "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=args.device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=args.device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=args.device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=args.device)\n",
-    "\n",
-    "    outer_loss = torch.tensor(0.0, device=args.device)\n",
-    "    accuracy = torch.tensor(0.0, device=args.device)\n",
-    "\n",
-    "    for task_idx, (support_x, support_y, query_x, query_y) in enumerate(\n",
-    "        zip(support_xs, support_ys, query_xs, query_ys)\n",
-    "    ):\n",
-    "        support_prob = model(support_x)\n",
-    "        inner_loss = criterion(support_prob, support_y)\n",
-    "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.4, first_order=True)\n",
-    "\n",
-    "        query_prob = model(query_x, params=params)\n",
-    "        outer_loss += criterion(query_prob, query_y)\n",
-    "\n",
-    "        with torch.no_grad():\n",
-    "            _, query_pred = torch.max(query_prob, dim=-1)\n",
-    "            accuracy += torch.mean(query_pred.eq(query_y).float())\n",
-    "\n",
-    "    outer_loss.div_(args.task_batch_size)\n",
-    "\n",
-    "    model.zero_grad()\n",
-    "    outer_loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    accuracy.div_(args.task_batch_size)\n",
-    "\n",
-    "    return accuracy.item(), outer_loss.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "1wQBu7TX0MJO"
-   },
-   "outputs": [],
-   "source": [
-    "def test_MAML(args, task_batch, model, criterion, optimizer):\n",
-    "    model.eval()\n",
-    "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=args.device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=args.device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=args.device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=args.device)\n",
-    "\n",
-    "    outer_loss = torch.tensor(0.0, device=args.device)\n",
-    "    accuracy = torch.tensor(0.0, device=args.device)\n",
-    "\n",
-    "    for task_idx, (support_x, support_y, query_x, query_y) in enumerate(\n",
-    "        zip(support_xs, support_ys, query_xs, query_ys)\n",
-    "    ):\n",
-    "        support_prob = model(support_x)\n",
-    "        inner_loss = criterion(support_prob, support_y)\n",
-    "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.4, first_order=True)\n",
-    "\n",
-    "        query_prob = model(query_x, params=params)\n",
-    "        outer_loss += criterion(query_prob, query_y)\n",
-    "\n",
-    "        with torch.no_grad():\n",
-    "            _, query_pred = torch.max(query_prob, dim=-1)\n",
-    "            accuracy += torch.mean(query_pred.eq(query_y).float())\n",
-    "\n",
-    "    outer_loss.div_(args.task_batch_size)\n",
-    "    accuracy.div_(args.task_batch_size)\n",
-    "\n",
-    "    return accuracy.item(), outer_loss.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "W6HODAYg0MJP"
    },
    "outputs": [],
    "source": [
-    "args = {\n",
+    "config = {\n",
     "    \"folder_name\": \"dataset\",\n",
     "    \"download\": True,\n",
     "    \"num_shots\": 5,\n",
@@ -278,9 +285,9 @@
     "    \"device\": \"cuda\",  # 필수\n",
     "}\n",
     "\n",
-    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(args)\n",
+    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = ConvNet(1, args.num_ways).to(device=args.device)\n",
+    "model = ConvNet(in_channels=1, out_features=config[\"num_ways\"]).to(device=config[\"device\"])\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
@@ -337,19 +344,32 @@
     }
    ],
    "source": [
-    "# Training loop\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=args.num_task_batch_train) as pbar:\n",
+    "# 메타-트레이닝\n",
+    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
     "    train_accuracies = []\n",
     "    val_accuracies = []\n",
     "    train_losses = []\n",
     "    val_losses = []\n",
     "\n",
     "    for task_batch_idx, (train_batch, val_batch) in enumerate(pbar):\n",
-    "        if task_batch_idx >= args.num_task_batch_train:\n",
+    "        if task_batch_idx >= config[\"num_task_batch_train\"]:\n",
     "            break\n",
     "\n",
-    "        train_accuracy, train_loss = train_MAML(args, train_batch, model, criterion, optimizer)\n",
-    "        val_accuracy, val_loss = test_MAML(args, val_batch, model, criterion, optimizer)\n",
+    "        train_accuracy, train_loss = train_maml(\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch_size=config[\"task_batch_size\"],\n",
+    "            task_batch=train_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "            optimizer=optimizer,\n",
+    "        )\n",
+    "        val_accuracy, val_loss = test_maml(\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch_size=config[\"task_batch_size\"],\n",
+    "            task_batch=val_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "        )\n",
     "\n",
     "        train_accuracies.append(train_accuracy)\n",
     "        val_accuracies.append(val_accuracy)\n",
@@ -363,9 +383,15 @@
     "            val_loss=\"{0:.4f}\".format(val_loss),\n",
     "        )\n",
     "\n",
-    "# save model\n",
-    "save_model(args, model, \"MAML_classification.th\")\n",
-    "print_graph(train_accuracies, val_accuracies, train_losses, val_losses)"
+    "# 모델 저장하기\n",
+    "save_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_classification.th\")\n",
+    "\n",
+    "print_graph(\n",
+    "    train_accuracies=train_accuracies,\n",
+    "    val_accuracies=val_accuracies,\n",
+    "    train_losses=train_losses,\n",
+    "    val_losses=val_losses,\n",
+    ")"
    ]
   },
   {
@@ -406,19 +432,25 @@
     }
    ],
    "source": [
-    "# load model\n",
-    "load_model(args, model, \"MAML_classification.th\")\n",
+    "# 모델 불러오기\n",
+    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_classification.th\")\n",
     "\n",
-    "# Testing loop\n",
-    "with tqdm(test_dataloader, total=args.num_task_batch_test) as pbar:\n",
+    "# 메타-테스팅\n",
+    "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
     "    sum_test_accuracies = 0.0\n",
     "    sum_test_losses = 0.0\n",
     "\n",
     "    for task_batch_idx, test_batch in enumerate(pbar):\n",
-    "        if task_batch_idx >= args.num_task_batch_test:\n",
+    "        if task_batch_idx >= config[\"num_task_batch_test\"]:\n",
     "            break\n",
     "\n",
-    "        test_accuracy, test_loss = test_MAML(args, test_batch, model, criterion, optimizer)\n",
+    "        test_accuracy, test_loss = test_maml(\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch_size=config[\"task_batch_size\"],\n",
+    "            task_batch=test_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "        )\n",
     "\n",
     "        sum_test_accuracies += test_accuracy\n",
     "        sum_test_losses += test_loss\n",
