--- a/src/meta_sl/opt-based/maml_regression.ipynb
+++ b/src/meta_sl/opt-based/maml_regression.ipynb
@@ -8,13 +8,15 @@
    },
    "outputs": [],
    "source": [
+    "import collections\n",
     "import os\n",
     "import warnings\n",
+    "from typing import Dict, List, Optional, Tuple\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torchmeta.modules import MetaModule, MetaSequential\n",
+    "from torchmeta.modules import MetaLinear, MetaModule, MetaSequential\n",
     "from torchmeta.toy import Sinusoid\n",
     "from torchmeta.utils.data import BatchMetaDataLoader\n",
     "from torchmeta.utils.gradient_based import gradient_update_parameters\n",
@@ -31,27 +33,29 @@
    },
    "outputs": [],
    "source": [
-    "def get_dataloader(args):\n",
+    "def get_dataloader(\n",
+    "    config: Dict[str, int]\n",
+    ") -> Tuple[BatchMetaDataLoader, BatchMetaDataLoader, BatchMetaDataLoader]:\n",
     "    train_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_task_batch_train * args.task_batch_size,\n",
+    "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
+    "        num_tasks=config[\"num_task_batch_train\"] * config[\"task_batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=args.task_batch_size)\n",
+    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=config[\"task_batch_size\"])\n",
     "\n",
     "    val_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_task_batch_train * args.task_batch_size,\n",
+    "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
+    "        num_tasks=config[\"num_task_batch_train\"] * config[\"task_batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=args.task_batch_size)\n",
+    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=config[\"task_batch_size\"])\n",
     "\n",
     "    test_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_task_batch_test * args.task_batch_size,\n",
+    "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
+    "        num_tasks=config[\"num_task_batch_test\"] * config[\"task_batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=args.task_batch_size)\n",
+    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=config[\"task_batch_size\"])\n",
     "    return train_dataloader, val_dataloader, test_dataloader"
    ]
   },
@@ -59,11 +63,122 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "DdLLNhKg4hjc"
+    "id": "rpPr1Yh64kNI"
    },
    "outputs": [],
    "source": [
-    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "class FCNet(MetaModule):\n",
+    "    def __init__(self, in_dimension: int, out_dimension: int) -> None:\n",
+    "        super(FCNet, self).__init__()\n",
+    "        self.in_dimension = in_dimension\n",
+    "        self.out_dimension = out_dimension\n",
+    "        self.hidden_size = 40\n",
+    "\n",
+    "        self.linears = MetaSequential(\n",
+    "            MetaLinear(1, self.hidden_size),\n",
+    "            nn.ReLU(),\n",
+    "            MetaLinear(self.hidden_size, self.hidden_size),\n",
+    "            nn.ReLU(),\n",
+    "            MetaLinear(self.hidden_size, 1),\n",
+    "        )\n",
+    "\n",
+    "    def forward(\n",
+    "        self, x: torch.Tensor, params: Optional[collections.OrderedDict] = None\n",
+    "    ) -> torch.Tensor:\n",
+    "        pred = self.linears(x, params=self.get_subdict(params, \"linears\"))\n",
+    "        return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "6zjwLd6k4lXC"
+   },
+   "outputs": [],
+   "source": [
+    "def train_maml(\n",
+    "    num_shots: int,\n",
+    "    device: str,\n",
+    "    task_batch_size: int,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: FCNet,\n",
+    "    criterion: nn.MSELoss,\n",
+    "    optimizer: torch.optim.Adam,\n",
+    ") -> float:\n",
+    "    model.train()\n",
+    "\n",
+    "    xs, ys = task_batch\n",
+    "    support_xs = xs[:, :num_shots, :].to(device=device).type(torch.float)\n",
+    "    query_xs = xs[:, num_shots:, :].to(device=device).type(torch.float)\n",
+    "    support_ys = ys[:, :num_shots, :].to(device=device).type(torch.float)\n",
+    "    query_ys = ys[:, num_shots:, :].to(device=device).type(torch.float)\n",
+    "\n",
+    "    outer_loss = torch.tensor(0.0, device=device)\n",
+    "\n",
+    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "        support_pred = model(support_x)\n",
+    "        inner_loss = criterion(support_pred, support_y)\n",
+    "\n",
+    "        params = gradient_update_parameters(model, inner_loss, step_size=0.01, first_order=False)\n",
+    "\n",
+    "        query_pred = model(query_x, params=params)\n",
+    "        outer_loss += criterion(query_pred, query_y)\n",
+    "\n",
+    "    outer_loss.div_(task_batch_size)\n",
+    "\n",
+    "    model.zero_grad()\n",
+    "    outer_loss.backward()\n",
+    "    optimizer.step()\n",
+    "    return outer_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Z6zYqurP4mge"
+   },
+   "outputs": [],
+   "source": [
+    "def test_maml(\n",
+    "    num_shots: int,\n",
+    "    device: str,\n",
+    "    task_batch_size: int,\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    model: FCNet,\n",
+    "    criterion: nn.MSELoss,\n",
+    ") -> float:\n",
+    "    model.eval()\n",
+    "\n",
+    "    xs, ys = task_batch\n",
+    "    support_xs = xs[:, :num_shots, :].to(device=device).type(torch.float)\n",
+    "    query_xs = xs[:, num_shots:, :].to(device=device).type(torch.float)\n",
+    "    support_ys = ys[:, :num_shots, :].to(device=device).type(torch.float)\n",
+    "    query_ys = ys[:, num_shots:, :].to(device=device).type(torch.float)\n",
+    "\n",
+    "    outer_loss = torch.tensor(0.0, device=device)\n",
+    "\n",
+    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "        support_pred = model(support_x)\n",
+    "        inner_loss = criterion(support_pred, support_y)\n",
+    "\n",
+    "        params = gradient_update_parameters(model, inner_loss, step_size=0.01, first_order=False)\n",
+    "\n",
+    "        query_pred = model(query_x, params=params)\n",
+    "        outer_loss += criterion(query_pred, query_y)\n",
+    "\n",
+    "    outer_loss.div_(task_batch_size)\n",
+    "    return outer_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(output_folder: str, model: FCNet, title: str) -> None:\n",
     "    if not os.path.isdir(output_folder):\n",
     "        os.mkdir(output_folder)\n",
     "    filename = os.path.join(output_folder, title)\n",
@@ -74,7 +189,7 @@
     "    print(\"Model is saved in\", filename)\n",
     "\n",
     "\n",
-    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "def load_model(output_folder: str, model: FCNet, title: str) -> None:\n",
     "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
     "    print(\"Model is loaded\")"
@@ -83,12 +198,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "k3ZTeeuL4iwi"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def print_loss_graph(train_losses, val_losses):\n",
+    "def print_loss_graph(train_losses: List[float], val_losses: List[float]) -> None:\n",
     "    plt.figure(figsize=(8, 6), dpi=80)\n",
     "\n",
     "    plt.plot(train_losses, label=\"train_loss\")\n",
@@ -103,112 +216,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "rpPr1Yh64kNI"
-   },
-   "outputs": [],
-   "source": [
-    "class FCNet(MetaModule):\n",
-    "    def __init__(self, in_dimension, out_dimension):\n",
-    "        super(FCNet, self).__init__()\n",
-    "        self.in_dimension = in_dimension\n",
-    "        self.out_dimension = out_dimension\n",
-    "        self.hidden_size = 40\n",
-    "\n",
-    "        self.linears = MetaSequential(\n",
-    "            MetaLinear(1, self.hidden_size),\n",
-    "            nn.ReLU(),\n",
-    "            MetaLinear(self.hidden_size, self.hidden_size),\n",
-    "            nn.ReLU(),\n",
-    "            MetaLinear(self.hidden_size, 1),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x, params=None):\n",
-    "        pred = self.linears(x, params=self.get_subdict(params, \"linears\"))\n",
-    "        return pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "6zjwLd6k4lXC"
-   },
-   "outputs": [],
-   "source": [
-    "def train_MAML(args, task_batch, model, criterion, optimizer):\n",
-    "    model.train()\n",
-    "\n",
-    "    xs, ys = task_batch\n",
-    "    support_xs = xs[:, : args.num_shots, :].to(device=args.device).type(torch.float)\n",
-    "    query_xs = xs[:, args.num_shots :, :].to(device=args.device).type(torch.float)\n",
-    "    support_ys = ys[:, : args.num_shots, :].to(device=args.device).type(torch.float)\n",
-    "    query_ys = ys[:, args.num_shots :, :].to(device=args.device).type(torch.float)\n",
-    "\n",
-    "    outer_loss = torch.tensor(0.0, device=args.device)\n",
-    "\n",
-    "    for task_idx, (support_x, support_y, query_x, query_y) in enumerate(\n",
-    "        zip(support_xs, support_ys, query_xs, query_ys)\n",
-    "    ):\n",
-    "        support_pred = model(support_x)\n",
-    "        inner_loss = criterion(support_pred, support_y)\n",
-    "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.01, first_order=False)\n",
-    "\n",
-    "        query_pred = model(query_x, params=params)\n",
-    "        outer_loss += criterion(query_pred, query_y)\n",
-    "\n",
-    "    outer_loss.div_(args.task_batch_size)\n",
-    "    model.zero_grad()\n",
-    "    outer_loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    return outer_loss.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Z6zYqurP4mge"
-   },
-   "outputs": [],
-   "source": [
-    "def test_MAML(args, task_batch, model, criterion, optimizer):\n",
-    "    model.eval()\n",
-    "\n",
-    "    xs, ys = task_batch\n",
-    "    support_xs = xs[:, : args.num_shots, :].to(device=args.device).type(torch.float)\n",
-    "    query_xs = xs[:, args.num_shots :, :].to(device=args.device).type(torch.float)\n",
-    "    support_ys = ys[:, : args.num_shots, :].to(device=args.device).type(torch.float)\n",
-    "    query_ys = ys[:, args.num_shots :, :].to(device=args.device).type(torch.float)\n",
-    "\n",
-    "    outer_loss = torch.tensor(0.0, device=args.device)\n",
-    "\n",
-    "    for task_idx, (support_x, support_y, query_x, query_y) in enumerate(\n",
-    "        zip(support_xs, support_ys, query_xs, query_ys)\n",
-    "    ):\n",
-    "        support_pred = model(support_x)\n",
-    "        inner_loss = criterion(support_pred, support_y)\n",
-    "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.01, first_order=False)\n",
-    "\n",
-    "        query_pred = model(query_x, params=params)\n",
-    "        outer_loss += criterion(query_pred, query_y)\n",
-    "\n",
-    "    outer_loss.div_(args.task_batch_size)\n",
-    "\n",
-    "    return outer_loss.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "z8BSi4i54nqE"
    },
    "outputs": [],
    "source": [
-    "args = {\n",
+    "config = {\n",
     "    \"num_shots\": 10,\n",
     "    \"output_folder\": \"model\",\n",
     "    \"task_batch_size\": 100,  # 필수\n",
@@ -217,9 +229,9 @@
     "    \"device\": \"cuda\",  # 필수\n",
     "}\n",
     "\n",
-    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(args)\n",
+    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = FCNet(1, 1).to(device=args.device)\n",
+    "model = FCNet(in_dimension=1, out_dimension=1).to(device=config[\"device\"])\n",
     "\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
@@ -276,23 +288,39 @@
     }
    ],
    "source": [
-    "# Training loop\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=args.num_task_batch_train) as pbar:\n",
+    "# 메타-트레이닝\n",
+    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
     "    train_losses = []\n",
     "    val_losses = []\n",
     "\n",
     "    for task_batch_idx, (train_batch, val_batch) in enumerate(pbar):\n",
-    "        train_loss = train_MAML(args, train_batch, model, criterion, optimizer)\n",
-    "        val_loss = test_MAML(args, val_batch, model, criterion, optimizer)\n",
+    "        train_loss = train_maml(\n",
+    "            num_shots=config[\"num_shots\"],\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch_size=config[\"task_batch_size\"],\n",
+    "            task_batch=train_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "            optimizer=optimizer,\n",
+    "        )\n",
+    "        val_loss = test_maml(\n",
+    "            num_shots=config[\"num_shots\"],\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch_size=config[\"task_batch_size\"],\n",
+    "            task_batch=train_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "        )\n",
     "\n",
     "        train_losses.append(train_loss)\n",
     "        val_losses.append(val_loss)\n",
     "\n",
     "        pbar.set_postfix(train_loss=\"{0:.4f}\".format(train_loss), val_loss=\"{0:.4f}\".format(val_loss))\n",
     "\n",
-    "# save model\n",
-    "save_model(args, model, \"MAML_regression.th\")\n",
-    "print_loss_graph(train_losses, val_losses)"
+    "# 모델 저장하기\n",
+    "save_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_regression.th\")\n",
+    "\n",
+    "print_loss_graph(train_losses=train_losses, val_losses=val_losses)"
    ]
   },
   {
@@ -333,15 +361,22 @@
     }
    ],
    "source": [
-    "# load model\n",
-    "load_model(args, model, \"MAML_regression.th\")\n",
+    "# 모델 불러오기\n",
+    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_regression.th\")\n",
     "\n",
-    "# Testing loop\n",
-    "with tqdm(test_dataloader, total=args.num_task_batch_test) as pbar:\n",
+    "# 메타-테스팅\n",
+    "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
     "    sum_test_losses = 0.0\n",
     "\n",
     "    for task_batch_idx, test_batch in enumerate(pbar):\n",
-    "        test_loss = test_MAML(args, test_batch, model, criterion, optimizer)\n",
+    "        test_loss = test_maml(\n",
+    "            num_shots=config[\"num_shots\"],\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch_size=config[\"task_batch_size\"],\n",
+    "            task_batch=train_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
+    "        )\n",
     "\n",
     "        sum_test_losses += test_loss\n",
     "        pbar.set_postfix(test_loss=\"{0:.4f}\".format(sum_test_losses / (task_batch_idx + 1)))"
