--- a/src/meta_sl/metric-based/prototypical_network.ipynb
+++ b/src/meta_sl/metric-based/prototypical_network.ipynb
@@ -79,60 +79,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "1YZB1tTtUivT"
-   },
-   "outputs": [],
-   "source": [
-    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    if not os.path.isdir(output_folder):\n",
-    "        os.mkdir(output_folder)\n",
-    "    filename = os.path.join(output_folder, title)\n",
-    "\n",
-    "    with open(filename, \"wb\") as f:\n",
-    "        state_dict = model.state_dict()\n",
-    "        torch.save(state_dict, f)\n",
-    "    print(\"Model is saved in\", filename)\n",
-    "\n",
-    "\n",
-    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    filename = os.path.join(output_folder, title)\n",
-    "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Model is loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "8Q1AMYvaUmtX"
-   },
-   "outputs": [],
-   "source": [
-    "def print_graph(\n",
-    "    train_accuracies: List[float],\n",
-    "    val_accuracies: List[float],\n",
-    "    train_losses: List[float],\n",
-    "    val_losses: List[float],\n",
-    ") -> None:\n",
-    "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
-    "\n",
-    "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
-    "    axs[0].plot(val_accuracies, label=\"test_acc\")\n",
-    "    axs[0].set_title(\"Accuracy\")\n",
-    "    axs[0].legend()\n",
-    "\n",
-    "    axs[1].plot(train_losses, label=\"train_loss\")\n",
-    "    axs[1].plot(val_losses, label=\"test_loss\")\n",
-    "    axs[1].set_title(\"Loss\")\n",
-    "    axs[1].legend()\n",
-    "\n",
-    "    fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "dT5kVYM8UoCz"
    },
    "outputs": [],
@@ -200,7 +146,7 @@
     "def train_proto(\n",
     "    device: str,\n",
     "    task_batch: Dict[str, List[torch.Tensor]],\n",
-    "    model: nn.Module,\n",
+    "    model: PrototypicalNet,\n",
     "    criterion: nn.CrossEntropyLoss,\n",
     "    optimizer: torch.optim.Adam,\n",
     ") -> Tuple[float, float]:\n",
@@ -239,7 +185,7 @@
     "def test_proto(\n",
     "    device: str,\n",
     "    task_batch: Dict[str, List[torch.Tensor]],\n",
-    "    model: nn.Module,\n",
+    "    model: PrototypicalNet,\n",
     "    criterion: nn.CrossEntropyLoss,\n",
     ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
@@ -258,6 +204,56 @@
     "        _, query_pred = torch.min(distance, dim=-1)\n",
     "        accuracy += torch.mean(query_pred.eq(query_ys).float())\n",
     "    return accuracy.item(), loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(output_folder: str, model: PrototypicalNet, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
+    "    with open(filename, \"wb\") as f:\n",
+    "        state_dict = model.state_dict()\n",
+    "        torch.save(state_dict, f)\n",
+    "    print(\"Model is saved in\", filename)\n",
+    "\n",
+    "\n",
+    "def load_model(output_folder: str, model: PrototypicalNet, title: str) -> None:\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "    model.load_state_dict(torch.load(filename))\n",
+    "    print(\"Model is loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_graph(\n",
+    "    train_accuracies: List[float],\n",
+    "    val_accuracies: List[float],\n",
+    "    train_losses: List[float],\n",
+    "    val_losses: List[float],\n",
+    ") -> None:\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "\n",
+    "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
+    "    axs[0].plot(val_accuracies, label=\"test_acc\")\n",
+    "    axs[0].set_title(\"Accuracy\")\n",
+    "    axs[0].legend()\n",
+    "\n",
+    "    axs[1].plot(train_losses, label=\"train_loss\")\n",
+    "    axs[1].plot(val_losses, label=\"test_loss\")\n",
+    "    axs[1].set_title(\"Loss\")\n",
+    "    axs[1].legend()\n",
+    "\n",
+    "    fig.show()"
    ]
   },
   {
